圆角处理采用另一种方式，滑动更平滑

--- a/DouTu/DouTu/Info.plist
+++ b/DouTu/DouTu/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>斗图王</string>
+	<string>斗图王1</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
